tests/typechecker/should_fail/nametype_ta.csp
X :: Bool
nametype X = {0}
